Fixed countdown spacing

--- a/countdown/index.css
+++ b/countdown/index.css
@@ -83,7 +83,7 @@ footer {
     display: flex;
     /* flex-direction: column; */
     align-items: baseline;
-    /* gap: 0.5rem; */
+    gap: 0.25rem;
 }
 
 .countdown-component-value {
